name:                socks-server
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             OtherLicense
license-file:        LICENSE
author:              Gregor Kopf
maintainer:          code@gregorkopf.de
category:            Network
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:   Network.Socks.Protocol, Network.Socks.Server, Network.TCPServer
  
  build-depends:       base >=4.7
               , network >=2.4
               , hslogger >=1.2
               , attoparsec >=0.11
               , bytestring >=0.10
               , iproute >=1.2
  default-language:    Haskell2010
  
